Java 17 migrations